# universal-remote-control

./: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  DeviceNode.cpp  DeviceNode.h  GlobalDefs.h  HttpServer.cpp  HttpServer.h  Makefile  MongoAgent.cpp  MongoAgent.h  MqttClient.cpp  MqttClient.h  MySqlAgent.cpp  MySqlAgent.h  README.md  ServerEngine.cpp  ServerEngine.h  UniversalRemote.cpp  UniversalRemoteControl_final.c  config.json  http_server.cpp  main.cpp
